tap(4): Just use mutex_enter.

PR kern/58167